--- a/src/style/generals.scss
+++ b/src/style/generals.scss
@@ -73,6 +73,7 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 999;
 
     &:hover {
         color: $text-red
